--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,7 @@ hr {
     width: 600px;
     background-color: #333;
     border: 3px solid lightcyan;
+    border-radius: 10px;
     position: relative;
     top: 50%;
     left: 50%;
@@ -339,49 +340,51 @@ img {
     outline: 0;
     text-align: center;
     width: 100%;
-  }
+}
 
-  
-  form {
+
+
+  .formModoDeJuego {
     display: flex;
     gap: 20px;
   }
   
-  label {
+  .labelModoDeJuego {
     display: flex;
     cursor: pointer;
     font-weight: bold;
+    border-radius: 10px;
     position: relative;
     overflow: hidden;
     margin-bottom: 0.375em;
   }
 
-  label input {
+  .labelModoDeJuego input {
     position: absolute;
     left: -9999px;
   }
 
-  label input:checked + span {
+  .labelModoDeJuego input:checked + span {
     background-color: #d6d6e5;
     scale: 1.2;
   }
 
-  label input:checked + span:before {
+  .labelModoDeJuego input:checked + span:before {
     box-shadow: inset 0 0 0 0.4375em #00005c;
   }
 
-  label span {
+  .labelModoDeJuego span {
     display: flex;
     align-items: center;
     padding: 20px;
     transition: 0.25s ease;
   }
 
-  label span:hover {
+  .labelModoDeJuego span:hover {
     background-color: #d6d6e5;
   }
 
-  label span:before {
+  .labelModoDeJuego span:before {
     display: flex;
     flex-shrink: 0;
     content: "";
@@ -392,17 +395,4 @@ img {
     margin-right: 0.375em;
     transition: 0.25s ease;
     box-shadow: inset 0 0 0 0.125em #00005c;
-  }
-  
-  .container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
   }
